logs/mobility/build.make.013.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:1098:5: error: expected unqualified-id before ‘if’
     if (message->data == 4) {
     ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:1100:7: error: expected unqualified-id before ‘else’
     } else {
       ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:1103:1: error: expected declaration before ‘}’ token
 }
 ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
